use router links in move files

--- a/src/pages/moves/combat/battle.mdx
+++ b/src/pages/moves/combat/battle.mdx
@@ -12,6 +12,6 @@ title: Battle
 
 On a **strong hit**, you achieve your objective unconditionally. You and any allies who joined the battle may take +2 momentum.
 
-On a **weak hit**, you achieve your objective, but not without cost. [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+On a **weak hit**, you achieve your objective, but not without cost. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
 
-On a **miss**, you are defeated or the objective is lost. [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+On a **miss**, you are defeated or the objective is lost. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
