--- a/src/pages/moves/combat/strike.mdx
+++ b/src/pages/moves/combat/strike.mdx
@@ -8,4 +8,4 @@ On a **strong hit**, mark progress twice. You dominate your foe and stay in cont
 
 On a **weak hit**, mark progress twice, but you expose yourself to danger. You are in a bad spot.
 
-On a **miss**, the fight turns against you. You are in a bad spot and must [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+On a **miss**, the fight turns against you. You are in a bad spot and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
