--- a/src/pages/moves/combat/take_decisive_action.mdx
+++ b/src/pages/moves/combat/take_decisive_action.mdx
@@ -11,13 +11,13 @@ On a **strong hit**, you prevail. Take +1 momentum. If any objectives remain and
 
 On a **weak hit**, you achieve your objective, but not without cost. Roll on the table below or choose one. If the fight continues, you are in a bad spot.
 
-| Roll   | Result                                                                               |
-| ------ | ------------------------------------------------------------------------------------ |
-| 1-40   | It’s worse than you thought: Make a [suffer move](/starforged-srd/moves/suffer) (-2) |
-| 41-52  | Victory is short-lived: A new peril or foe appears                                   |
-| 53-64  | You face collateral damage: Something is lost, damaged, or broken                    |
-| 65-76  | Others pay the price: Someone else suffers the cost                                  |
-| 77-88  | Others won’t forget: You are marked for vengeance                                    |
-| 89-100 | It gets complicated: The true nature of a foe or objective is revealed               |
+| Roll   | Result                                                                                           |
+| ------ | ------------------------------------------------------------------------------------------------ |
+| 1-40   | It’s worse than you thought: Make a <RouterLink to='/moves/suffer'>suffer move</RouterLink> (-2) |
+| 41-52  | Victory is short-lived: A new peril or foe appears                                               |
+| 53-64  | You face collateral damage: Something is lost, damaged, or broken                                |
+| 65-76  | Others pay the price: Someone else suffers the cost                                              |
+| 77-88  | Others won’t forget: You are marked for vengeance                                                |
+| 89-100 | It gets complicated: The true nature of a foe or objective is revealed                           |
 
-On a **miss**, you are defeated or your objective is lost. [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+On a **miss**, you are defeated or your objective is lost. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
