--- a/src/pages/moves/connection/forge_a_bond.mdx
+++ b/src/pages/moves/connection/forge_a_bond.mdx
@@ -10,6 +10,6 @@ On a **strong hit**, you now share a bond. Mark a reward on your bonds legacy tr
 - Bolster their influence: When they aid you on a move closely associated with their role, add +2 instead of +1.
 - Expand their influence: Give them a second role. When they aid you on a move closely associated with either role, add +1 and take +1 momentum on a hit.
 
-On a **weak hit**, as above, but they ask something more of you first. To gain the bond and the legacy reward, envision the nature of the request, and do it (or [Swear an Iron Vow](/starforged-srd/moves/quest/swear_an_iron_vow) to see it done).
+On a **weak hit**, as above, but they ask something more of you first. To gain the bond and the legacy reward, envision the nature of the request, and do it (or <RouterLink to='/moves/quest/swear_an_iron_vow'>Swear an Iron Vow</RouterLink> to see it done).
 
 On a **miss**, they reveal a motivation or background that puts you at odds. If you recommit to this relationship, roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, raise the connection's rank by one (if not already epic).
