--- a/src/pages/moves/quest/forsake_your_vow.mdx
+++ b/src/pages/moves/quest/forsake_your_vow.mdx
@@ -6,8 +6,8 @@ title: Forsake Your Vow
 
 Then, envision the impact of this failure and choose one or more as appropriate to the nature of the vow. Any allies who shared this vow may also envision a cost.
 
-- You are demoralized or dispirited: [Endure Stress](/starforged-srd/moves/suffer/endure_stress).
-- A connection loses faith: [Test Your Relationship](/starforged-srd/moves/connection/test_your_relationship) when you next interact.
+- You are demoralized or dispirited: <RouterLink to='/moves/suffer/endure_stress'>Endure Stress</RouterLink>.
+- A connection loses faith: <RouterLink to='/moves/connection/test_your_relationship'>Test Your Relationship</RouterLink> when you next interact.
 - You must abandon a path or resource: Discard an asset.
 - Someone else pays a price: Envision how a person, being, or community bears the cost of the failure.
 - Someone else takes advantage: Envision how an enemy gains power.
