--- a/src/pages/moves/session/begin_a_session.mdx
+++ b/src/pages/moves/session/begin_a_session.mdx
@@ -4,7 +4,7 @@ title: Begin a Session
 
 **When you begin a significant session or chapter of play**, do all of the following.
 
-- Identify or adjust flagged content and [Set a Flag](/starforged-srd/moves/session/set_a_flag).
+- Identify or adjust flagged content and <RouterLink to='/moves/session/set_a_flag'>Set a Flag</RouterLink>.
 - Review or recap what happened last session.
 - Set the scene by envisioning your character’s current situation and intent.
 
