--- a/src/pages/moves/threshold/face_death.mdx
+++ b/src/pages/moves/threshold/face_death.mdx
@@ -9,6 +9,6 @@ On a **strong hit**, you are cast back into the mortal world.
 On a **weak hit**, choose one.
 
 - You die, but not before making a noble sacrifice. Envision your final moments.
-- There is more to be done. Envision what is revealed or asked of you at death's door, and [Swear an Iron Vow](/starforged-srd/moves/quest/swear_an_iron_vow) to complete an extreme quest. You return to the mortal world and must mark **doomed**. When you complete the deathbound quest, clear the impact.
+- There is more to be done. Envision what is revealed or asked of you at death's door, and <RouterLink to='/moves/quest/swear_an_iron_vow'>Swear an Iron Vow</RouterLink> to complete an extreme quest. You return to the mortal world and must mark **doomed**. When you complete the deathbound quest, clear the impact.
 
 On a **miss**, you are dead.
