--- a/src/pages/moves/adventure/aid_your_ally.mdx
+++ b/src/pages/moves/adventure/aid_your_ally.mdx
@@ -2,6 +2,6 @@
 title: Aid Your Ally
 ---
 
-**When you act in direct support of an ally**, envision how you aid them. Then, [Secure an Advantage](/starforged-srd/moves/adventure/secure_an_advantage) or [Gain Ground](/starforged-srd/moves/combat/gain_ground) to take action. If you score a hit, they (instead of you) take the benefits of the move.
+**When you act in direct support of an ally**, envision how you aid them. Then, <RouterLink to='/moves/adventure/secure_an_advantage'>Secure an Advantage</RouterLink> or <RouterLink to='/moves/combat/gain_ground'>Gain Ground</RouterLink> to take action. If you score a hit, they (instead of you) take the benefits of the move.
 
-If you [Gain Ground](/starforged-srd/moves/combat/gain_ground) and score a strong hit, you are both in control. On a **weak hit**, your ally is in control but you are in a bad spot.
+If you <RouterLink to='/moves/combat/gain_ground'>Gain Ground</RouterLink> and score a strong hit, you are both in control. On a **weak hit**, your ally is in control but you are in a bad spot.
