--- a/src/pages/moves/combat/face_defeat.mdx
+++ b/src/pages/moves/combat/face_defeat.mdx
@@ -2,6 +2,6 @@
 title: Face Defeat
 ---
 
-**When you abandon or are deprived of an objective**, envision the consequence of this failure, clear the objective, and [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+**When you abandon or are deprived of an objective**, envision the consequence of this failure, clear the objective, and <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
 
 If the fight continues, you may create a new objective and give it a rank to represent the changing situation. If any objectives remain, the fight continues and you are in a bad spot.
