--- a/src/pages/moves/connection/make_a_connection.mdx
+++ b/src/pages/moves/connection/make_a_connection.mdx
@@ -8,4 +8,4 @@ On a **strong hit**, you create a connection. Give them a role and rank. Wheneve
 
 On a **weak hit**, as above, but this connection comes with a complication or cost. Envision what they reveal or demand.
 
-On a **miss**, you don't make a connection and the situation worsens. [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+On a **miss**, you don't make a connection and the situation worsens. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
