--- a/src/pages/moves/connection/test_your_relationship.mdx
+++ b/src/pages/moves/connection/test_your_relationship.mdx
@@ -4,11 +4,11 @@ title: Test Your Relationship
 
 **When your relationship with a connection is tested through conflict, betrayal, or circumstance**, roll +heart. If you share a bond, add +1.
 
-On a **strong hit**, [Develop Your Relationship](/starforged-srd/moves/connection/develop_your_relationship).
+On a **strong hit**, <RouterLink to='/moves/connection/develop_your_relationship'>Develop Your Relationship</RouterLink>.
 
-On a **weak hit**, [Develop Your Relationship](/starforged-srd/moves/connection/develop_your_relationship), but also envision a demand or complication as a fallout of this test.
+On a **weak hit**, <RouterLink to='/moves/connection/develop_your_relationship'>Develop Your Relationship</RouterLink>, but also envision a demand or complication as a fallout of this test.
 
 On a **miss**, or if you have no interest in maintaining this relationship, choose one.
 
-- Lose the connection: Envision how this impacts you and [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
-- Prove your loyalty: Envision what you offer or what they demand, and [Swear an Iron Vow](/starforged-srd/moves/quest/swear_an_iron_vow) (formidable or greater) to see it done. Until you complete the quest, take no benefit for the connection. If you refuse or fail the quest, the connection is permanently undone.
+- Lose the connection: Envision how this impacts you and <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+- Prove your loyalty: Envision what you offer or what they demand, and <RouterLink to='/moves/quest/swear_an_iron_vow'>Swear an Iron Vow</RouterLink> (formidable or greater) to see it done. Until you complete the quest, take no benefit for the connection. If you refuse or fail the quest, the connection is permanently undone.
