--- a/src/pages/moves/exploration/set_a_course.mdx
+++ b/src/pages/moves/exploration/set_a_course.mdx
@@ -8,7 +8,7 @@ On a **strong hit**, you reach your destination and the situation there favors y
 
 On a **weak hit**, you arrive, but face a cost or complication. Choose one.
 
-- Suffer costs en route: Make a [suffer move](/starforged-srd/moves/suffer) (-2), or two [suffer moves](/starforged-srd/moves/suffer) (-1).
+- Suffer costs en route: Make a <RouterLink to='/moves/suffer'>suffer move</RouterLink> (-2), or two <RouterLink to='/moves/suffer'>suffer moves</RouterLink> (-1).
 - Face a complication at the destination: Envision what you encounter.
 
-On a **miss**, you are waylaid by a significant threat, and must [Pay the Price](/starforged-srd/moves/fate/pay_the_price). If you overcome this obstacle, you may push on safely to your destination.
+On a **miss**, you are waylaid by a significant threat, and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>. If you overcome this obstacle, you may push on safely to your destination.
