--- a/src/pages/moves/recover/hearten.mdx
+++ b/src/pages/moves/recover/hearten.mdx
@@ -4,8 +4,8 @@ title: Hearten
 
 **When you socialize, share intimacy, or find a moment of peace**, roll +heart.
 
-On a **strong hit**, you find companionship or comfort and your spirit is strengthened. If you are shaken, clear the impact and take +1 spirit. Otherwise, take +2 spirit. If you make this move as you [Sojourn](/starforged-srd/moves/recover/sojourn), take +1 more.
+On a **strong hit**, you find companionship or comfort and your spirit is strengthened. If you are shaken, clear the impact and take +1 spirit. Otherwise, take +2 spirit. If you make this move as you <RouterLink to='/moves/recover/sojourn'>Sojourn</RouterLink>, take +1 more.
 
-On a **weak hit**, as above, but this indulgence is fleeting. Envision an interruption, complication, or inner conflict. Then, [Lose Momentum](/starforged-srd/moves/suffer/lose_momentum) (-1).
+On a **weak hit**, as above, but this indulgence is fleeting. Envision an interruption, complication, or inner conflict. Then, <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> (-1).
 
-On a **miss**, you take no comfort and the situation worsens. [Pay the Price](/starforged-srd/moves/fate/pay_the_price).
+On a **miss**, you take no comfort and the situation worsens. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
