--- a/src/pages/moves/session/end_a_session.mdx
+++ b/src/pages/moves/session/end_a_session.mdx
@@ -4,7 +4,7 @@ title: End a Session
 
 **When you end a significant session or chapter of play**, reflect on the events of the game and identify any missed opportunities to mark progress.
 
-- If you strengthened your ties to a connection, [Develop Your Relationship](/starforged-srd/moves/connection/develop_your_relationship).
-- If you moved forward on a quest, [Reach a Milestone](/starforged-srd/moves/quest/reach_a_milestone).
+- If you strengthened your ties to a connection, <RouterLink to='/moves/connection/develop_your_relationship'>Develop Your Relationship</RouterLink>.
+- If you moved forward on a quest, <RouterLink to='/moves/quest/reach_a_milestone'>Reach a Milestone</RouterLink>.
 
 If there is a quest, connection, or other situation you would like to give focus in your next session, make note of it and take +1 momentum.
