--- a/src/pages/moves/session/set_a_flag.mdx
+++ b/src/pages/moves/session/set_a_flag.mdx
@@ -4,4 +4,4 @@ title: Set a Flag
 
 **When you identify situations or topics you don’t want to include, don’t want to envision in detail, or otherwise may need mindfulness when approaching**, that content is now flagged.
 
-When you encounter content flagged as something to approach mindfully, pause to consider or discuss its role in your story. When you come across flagged content that you would rather adjust or omit, [Change Your Fate](/starforged-srd/moves/session/change_your_fate).
+When you encounter content flagged as something to approach mindfully, pause to consider or discuss its role in your story. When you come across flagged content that you would rather adjust or omit, <RouterLink to='/moves/session/change_your_fate'>Change Your Fate</RouterLink>.
