--- a/src/pages/moves/suffer/companion_takes_a_hit.mdx
+++ b/src/pages/moves/suffer/companion_takes_a_hit.mdx
@@ -2,12 +2,12 @@
 title: Companion Takes a Hit
 ---
 
-**When your companion faces physical hardship**, they suffer -1 health for minor harm, -2 for serious harm, or -3 for major harm. If your companion's health is 0, [Lose Momentum](/starforged-srd/moves/suffer/lose_momentum) equal to any remaining harm.
+**When your companion faces physical hardship**, they suffer -1 health for minor harm, -2 for serious harm, or -3 for major harm. If your companion's health is 0, <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> equal to any remaining harm.
 
 Then, if their health is 0 or you choose to test their resilience, roll +your companion's health.
 
 On a **strong hit**, your companion rallies. Give them +1 health.
 
-On a **weak hit**, if your companion's health is not 0, you may [Lose Momentum](/starforged-srd/moves/suffer/lose_momentum) (-1) and give them +1 health. Otherwise, they press on.
+On a **weak hit**, if your companion's health is not 0, you may <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> (-1) and give them +1 health. Otherwise, they press on.
 
-On a **miss**, it's worse than you thought. They suffer an additional -1 health or you [Lose Momentum](/starforged-srd/moves/suffer/lose_momentum) (-2). If your companion's health is 0, they are out of action until given aid. If their health is 0 and you rolled a miss with a match on this move, they are dead or destroyed; discard the asset.
+On a **miss**, it's worse than you thought. They suffer an additional -1 health or you <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> (-2). If your companion's health is 0, they are out of action until given aid. If their health is 0 and you rolled a miss with a match on this move, they are dead or destroyed; discard the asset.
