--- a/src/pages/moves/adventure/compel.mdx
+++ b/src/pages/moves/adventure/compel.mdx
@@ -1,5 +1,6 @@
 ---
 title: Compel
+page: 150
 ---
 
 **When you try to persuade someone or make them an offer**, envision your approach. If you...
@@ -12,4 +13,4 @@ On a **strong hit**, they'll do what you want or agree to your conditions. Take 
 
 On a **weak hit**, as above, but their agreement comes with a demand or complication. Envision their counteroffer.
 
-On a **miss**, they refuse or make a demand that costs you greatly. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, they refuse or make a demand that costs you greatly. [Pay the Price](starforged/moves/fate/pay_the_price).
