--- a/src/pages/moves/adventure/face_danger.mdx
+++ b/src/pages/moves/adventure/face_danger.mdx
@@ -1,5 +1,6 @@
 ---
 title: Face Danger
+page: 147
 ---
 
 **When you attempt something risky or react to an imminent threat**, envision your action and roll. If you act...
@@ -12,6 +13,6 @@ title: Face Danger
 
 On a **strong hit**, you are successful. Take +1 momentum.
 
-On a **weak hit**, you succeed, but not without a cost. Make a <RouterLink to='/moves/suffer'>suffer move</RouterLink> (-1).
+On a **weak hit**, you succeed, but not without a cost. Make a [suffer move](starforged/collections/moves/suffer) (-1).
 
-On a **miss**, you fail, or a momentary success is undermined by a dire turn of events. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you fail, or a momentary success is undermined by a dire turn of events. [Pay the Price](starforged/moves/fate/pay_the_price).
