--- a/src/pages/moves/adventure/gather_information.mdx
+++ b/src/pages/moves/adventure/gather_information.mdx
@@ -1,5 +1,6 @@
 ---
 title: Gather Information
+page: 149
 ---
 
 **When you search for clues, conduct an investigation, analyze evidence, or do research**, roll +wits.
@@ -8,4 +9,4 @@ On a **strong hit**, you discover something helpful and specific. The path you m
 
 On a **weak hit**, the information provides new insight, but also complicates your quest. Envision what you discover. Then, take +1 momentum.
 
-On a **miss**, your investigation unearths a dire threat or reveals an unwelcome truth that undermines your quest. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, your investigation unearths a dire threat or reveals an unwelcome truth that undermines your quest. [Pay the Price](starforged/moves/fate/pay_the_price).
