--- a/src/pages/moves/adventure/secure_an_advantage.mdx
+++ b/src/pages/moves/adventure/secure_an_advantage.mdx
@@ -1,5 +1,6 @@
 ---
 title: Secure an Advantage
+page: 148
 ---
 
 **When you assess a situation, make preparations, or attempt to gain leverage**, envision your action and roll. If you act...
@@ -15,4 +16,4 @@ On a **hit**, you succeed. On a **strong hit**, take both. On a **weak hit**, ch
 - Take +2 momentum
 - Add +1 on your next move (not a progress move)
 
-On a **miss**, you fail or your assumptions betray you. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you fail or your assumptions betray you. [Pay the Price](starforged/moves/fate/pay_the_price).
