--- a/src/pages/moves/combat/clash.mdx
+++ b/src/pages/moves/combat/clash.mdx
@@ -1,11 +1,12 @@
 ---
 title: Clash
+page: 193
 ---
 
 **When you are in a bad spot and fight back against a foe at close quarters**, roll +iron; **when you exchange fire at a distance**, roll +edge.
 
 On a **strong hit**, mark progress twice. You overwhelm your foe and are in control.
 
-On a **weak hit**, mark progress, but you are dealt a counterblow or setback. You stay in a bad spot and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **weak hit**, mark progress, but you are dealt a counterblow or setback. You stay in a bad spot and must [Pay the Price](starforged/moves/fate/pay_the_price).
 
-On a **miss**, your foe dominates this exchange. You stay in a bad spot and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, your foe dominates this exchange. You stay in a bad spot and must [Pay the Price](starforged/moves/fate/pay_the_price).
