--- a/src/pages/moves/combat/enter_the_fray.mdx
+++ b/src/pages/moves/combat/enter_the_fray.mdx
@@ -1,5 +1,6 @@
 ---
 title: Enter the Fray
+page: 188
 ---
 
 **When you initiate combat or are forced into a fight**, envision your objective and give it a rank. If the combat includes discrete challenges or phases, set an objective with a rank for each.
