--- a/src/pages/moves/combat/face_defeat.mdx
+++ b/src/pages/moves/combat/face_defeat.mdx
@@ -1,7 +1,8 @@
 ---
 title: Face Defeat
+page: 196
 ---
 
-**When you abandon or are deprived of an objective**, envision the consequence of this failure, clear the objective, and <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+**When you abandon or are deprived of an objective**, envision the consequence of this failure, clear the objective, and [Pay the Price](starforged/moves/fate/pay_the_price).
 
 If the fight continues, you may create a new objective and give it a rank to represent the changing situation. If any objectives remain, the fight continues and you are in a bad spot.
