--- a/src/pages/moves/connection/develop_your_relationship.mdx
+++ b/src/pages/moves/connection/develop_your_relationship.mdx
@@ -1,5 +1,6 @@
 ---
 title: Develop Your Relationship
+page: 164
 ---
 
 **When you reinforce your relationship with a connection** by doing any of the following...
