--- a/src/pages/moves/exploration/confront_chaos.mdx
+++ b/src/pages/moves/exploration/confront_chaos.mdx
@@ -1,5 +1,6 @@
 ---
 title: Confront Chaos
+page: 177
 ---
 
 **When your exploration of a waypoint uncovers something dreadful**, decide the number of aspects: one, two, or three. Roll that number of times or choose that number of aspects on the table below. Then, envision how the encounter begins.
