--- a/src/pages/moves/exploration/finish_an_expedition.mdx
+++ b/src/pages/moves/exploration/finish_an_expedition.mdx
@@ -1,5 +1,6 @@
 ---
 title: Finish an Expedition
+page: 178
 progress_move: true
 ---
 
@@ -11,5 +12,5 @@ On a **weak hit**, as above, but you face an unforeseen complication at the end 
 
 On a **miss**, your destination is lost to you, or you come to understand the true nature or cost of the expedition. Envision what happens and choose one.
 
-- Abandon the expedition: Envision the cost of this setback and <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+- Abandon the expedition: Envision the cost of this setback and [Pay the Price](starforged/moves/fate/pay_the_price).
 - Return to the expedition: Roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, raise the expedition's rank by one (if not already epic).
