--- a/src/pages/moves/exploration/make_a_discovery.mdx
+++ b/src/pages/moves/exploration/make_a_discovery.mdx
@@ -1,5 +1,6 @@
 ---
 title: Make a Discovery
+page: 176
 ---
 
 **When your exploration of a waypoint uncovers something wondrous**, roll on the table below or choose one. Then, envision the nature of the discovery and how it is revealed. When you first experience or engage with the discovery, you and your allies may mark two ticks on your discoveries legacy track.
