--- a/src/pages/moves/exploration/set_a_course.mdx
+++ b/src/pages/moves/exploration/set_a_course.mdx
@@ -1,5 +1,6 @@
 ---
 title: Set a Course
+page: 180
 ---
 
 **When you follow a known route through perilous space, across hazardous terrain, or within a mysterious site**, roll +supply.
@@ -8,7 +9,7 @@ On a **strong hit**, you reach your destination and the situation there favors y
 
 On a **weak hit**, you arrive, but face a cost or complication. Choose one.
 
-- Suffer costs en route: Make a <RouterLink to='/moves/suffer'>suffer move</RouterLink> (-2), or two <RouterLink to='/moves/suffer'>suffer moves</RouterLink> (-1).
+- Suffer costs en route: Make a [suffer move](starforged/collections/moves/suffer) (-2), or two [suffer moves](starforged/collections/moves/suffer) (-1).
 - Face a complication at the destination: Envision what you encounter.
 
-On a **miss**, you are waylaid by a significant threat, and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>. If you overcome this obstacle, you may push on safely to your destination.
+On a **miss**, you are waylaid by a significant threat, and must [Pay the Price](starforged/moves/fate/pay_the_price). If you overcome this obstacle, you may push on safely to your destination.
