--- a/src/pages/moves/fate/ask_the_oracle.mdx
+++ b/src/pages/moves/fate/ask_the_oracle.mdx
@@ -1,5 +1,6 @@
 ---
 title: Ask the Oracle
+page: 229
 ---
 
 **When you seek to resolve questions, reveal details, discover locations, determine how other characters respond, or trigger encounters or events**, you may...
