--- a/src/pages/moves/quest/swear_an_iron_vow.mdx
+++ b/src/pages/moves/quest/swear_an_iron_vow.mdx
@@ -1,5 +1,6 @@
 ---
 title: Swear an Iron Vow
+page: 156
 ---
 
 **When you swear upon iron to complete a quest**, write your vow and give it a rank. Then, roll +heart. If you swear this vow to a connection, add +1; if you share a bond, add +2.
