--- a/src/pages/moves/recover/resupply.mdx
+++ b/src/pages/moves/recover/resupply.mdx
@@ -1,5 +1,6 @@
 ---
 title: Resupply
+page: 212
 ---
 
 **When you attempt to bolster your readiness**, envision the opportunity and your approach. If you...
@@ -16,4 +17,4 @@ On a **strong hit**, choose one.
 
 On a **weak hit**, as above, but you must first deal with a cost, complication, or demand. Envision the nature of this obstacle.
 
-On a **miss**, you encounter an unexpected peril. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you encounter an unexpected peril. [Pay the Price](starforged/moves/fate/pay_the_price).
