--- a/src/pages/moves/scene_challenge/index.mdx
+++ b/src/pages/moves/scene_challenge/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Scene Challenge Moves
+page: 239
 ---
 
 A **scene challenge** is an optional structured approach for resolving an extended non-combat scene against a threat or other characters, particularly when a time limit or looming danger adds extra urgency.
