--- a/src/pages/moves/suffer/index.mdx
+++ b/src/pages/moves/suffer/index.mdx
@@ -3,4 +3,4 @@ title: Suffer Moves
 page: 198
 ---
 
-When you bear the brunt of a failed action or make a concession, the suffer moves help resolve the cost. These moves are typically made when you must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink> and face a hardship that directly impacts your well-being and readiness, or as prompted by a move or asset.
+When you bear the brunt of a failed action or make a concession, the suffer moves help resolve the cost. These moves are typically made when you must [Pay the Price](starforged/moves/fate/pay_the_price) and face a hardship that directly impacts your well-being and readiness, or as prompted by a move or asset.
