--- a/src/pages/moves/threshold/overcome_destruction.mdx
+++ b/src/pages/moves/threshold/overcome_destruction.mdx
@@ -9,8 +9,8 @@ If you survive, you may use your connections to replace some of what was lost. T
 
 On a **strong hit**, you may call in a favor. This comes without conditions.
 
-On a **weak hit**, you owe someone. You must mark **indebted** and <RouterLink to='/moves/quest/swear_an_iron_vow'>Swear an Iron Vow</RouterLink> to complete an extreme quest in their service. When you complete the duty-bound quest, clear the impact.
+On a **weak hit**, you owe someone. You must mark **indebted** and [Swear an Iron Vow](starforged/moves/quest/swear_an_iron_vow) to complete an extreme quest in their service. When you complete the duty-bound quest, clear the impact.
 
-On a **miss**, as with the weak hit result, but this quest is against your nature, forces you to <RouterLink to='/moves/quest/forsake_your_vow'>Forsake Your Vow</RouterLink> on another quest, or is in the service of an enemy.
+On a **miss**, as with the weak hit result, but this quest is against your nature, forces you to [Forsake Your Vow](starforged/moves/quest/forsake_your_vow) on another quest, or is in the service of an enemy.
 
 If you accept the cost, take 1 experience for every marked ability on the discarded assets (minimum 3 experience). Spend this experience only on a new command vehicle, modules, and support vehicles.
