--- a/src/pages/moves/adventure/check_your_gear.mdx
+++ b/src/pages/moves/adventure/check_your_gear.mdx
@@ -1,5 +1,6 @@
 ---
 title: Check Your Gear
+page: 153
 ---
 
 **When you check to see if you have a specific helpful item or resource**, roll +supply.
@@ -8,7 +9,7 @@ On a **strong hit**, you have it, and are ready to act. Take +1 momentum.
 
 On a **weak hit**, you have it, but must choose one.
 
-- Your supply is diminished: <RouterLink to='/moves/suffer/sacrifice_resources'>Sacrifice Resources</RouterLink> (-1)
-- It's not quite right, and causes a complication or delay: <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> (-2)
+- Your supply is diminished: [Sacrifice Resources](starforged/moves/suffer/sacrifice_resources) (-1)
+- It's not quite right, and causes a complication or delay: [Lose Momentum](starforged/moves/suffer/lose_momentum) (-2)
 
-On a **miss**, you don't have it and the situation grows more perilous. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you don't have it and the situation grows more perilous. [Pay the Price](starforged/moves/fate/pay_the_price).
