--- a/src/pages/moves/combat/gain_ground.mdx
+++ b/src/pages/moves/combat/gain_ground.mdx
@@ -1,5 +1,6 @@
 ---
 title: Gain Ground
+page: 190
 ---
 
 **When you are in control and take action in a fight to reinforce your position or move toward an objective**, envision your approach and roll. If you are...
@@ -16,4 +17,4 @@ On a **hit**, you stay in control. On a **strong hit**, choose two. On a **weak 
 - Take +2 momentum
 - Add +1 on your next move (not a progress move)
 
-On a **miss**, your foe gains the upper hand, the fight moves to a new location, or you encounter a new peril. You are in a bad spot and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, your foe gains the upper hand, the fight moves to a new location, or you encounter a new peril. You are in a bad spot and must [Pay the Price](starforged/moves/fate/pay_the_price).
