--- a/src/pages/moves/combat/react_under_fire.mdx
+++ b/src/pages/moves/combat/react_under_fire.mdx
@@ -1,5 +1,6 @@
 ---
 title: React Under Fire
+page: 191
 ---
 
 **When you are in a bad spot and take action in a fight to avoid danger or overcome an obstacle**, envision your approach and roll. If you are...
@@ -12,6 +13,6 @@ title: React Under Fire
 
 On a **strong hit**, you succeed and are in control. Take +1 momentum.
 
-On a **weak hit**, you avoid the worst of the danger or overcome the obstacle, but not without a cost. Make a <RouterLink to='/moves/suffer'>suffer move</RouterLink> (-1). You stay in a bad spot.
+On a **weak hit**, you avoid the worst of the danger or overcome the obstacle, but not without a cost. Make a [suffer move](starforged/collections/moves/suffer) (-1). You stay in a bad spot.
 
-On a **miss**, the situation worsens. You stay in a bad spot and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, the situation worsens. You stay in a bad spot and must [Pay the Price](starforged/moves/fate/pay_the_price).
