--- a/src/pages/moves/connection/make_a_connection.mdx
+++ b/src/pages/moves/connection/make_a_connection.mdx
@@ -1,5 +1,6 @@
 ---
 title: Make a Connection
+page: 163
 ---
 
 **When you search out a new relationship or give focus to an existing relationship (not an ally or companion)**, roll +heart.
@@ -8,4 +9,4 @@ On a **strong hit**, you create a connection. Give them a role and rank. Wheneve
 
 On a **weak hit**, as above, but this connection comes with a complication or cost. Envision what they reveal or demand.
 
-On a **miss**, you don't make a connection and the situation worsens. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you don't make a connection and the situation worsens. [Pay the Price](starforged/moves/fate/pay_the_price).
