--- a/src/pages/moves/exploration/explore_a_waypoint.mdx
+++ b/src/pages/moves/exploration/explore_a_waypoint.mdx
@@ -1,14 +1,15 @@
 ---
 title: Explore a Waypoint
+page: 174
 ---
 
 **When you divert from an expedition to examine a notable location**, roll +wits.
 
-On a **strong hit**, choose one. On a **strong hit with a match**, you may instead <RouterLink to='/moves/exploration/make_a_discovery'>Make a Discovery</RouterLink>.
+On a **strong hit**, choose one. On a **strong hit with a match**, you may instead [Make a Discovery](starforged/moves/exploration/make_a_discovery).
 
 - Find an opportunity: Envision a favorable insight, situation, resource, or encounter. Then, take +2 momentum.
 - Gain progress: Mark progress on your expedition, per its rank.
 
 On a **weak hit**, you uncover something interesting, but it is bound up in a peril or reveals an ominous aspect of this place. Envision what you encounter. Then, take +1 momentum.
 
-On a **miss**, you encounter an immediate hardship or threat, and must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>. On a **miss with a match**, you may instead <RouterLink to='/moves/exploration/confront_chaos'>Confront Chaos</RouterLink>.
+On a **miss**, you encounter an immediate hardship or threat, and must [Pay the Price](starforged/moves/fate/pay_the_price). On a **miss with a match**, you may instead [Confront Chaos](starforged/moves/exploration/confront_chaos).
