--- a/src/pages/moves/exploration/undertake_an_expedition.mdx
+++ b/src/pages/moves/exploration/undertake_an_expedition.mdx
@@ -1,5 +1,6 @@
 ---
 title: Undertake an Expedition
+page: 169
 ---
 
 **When you trailblaze a route through perilous space, journey over hazardous terrain, or survey a mysterious site**, give the expedition a name and rank. Then, for each segment of the expedition, envision your approach. If you...
@@ -12,7 +13,7 @@ On a **strong hit**, you reach a waypoint. Envision the location and mark progre
 
 On a **weak hit**, as above, but this progress costs you. Choose one.
 
-- Suffer costs en route: Make a <RouterLink to='/moves/suffer'>suffer move</RouterLink> (-2), or two <RouterLink to='/moves/suffer'>suffer moves</RouterLink> (-1).
+- Suffer costs en route: Make a [suffer move](starforged/collections/moves/suffer) (-2), or two [suffer moves](starforged/collections/moves/suffer) (-1).
 - Face a peril at the waypoint: Envision what you encounter.
 
-On a **miss**, you are waylaid by a crisis, or arrive at a waypoint to confront an immediate hardship or threat. Do not mark progress, and <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you are waylaid by a crisis, or arrive at a waypoint to confront an immediate hardship or threat. Do not mark progress, and [Pay the Price](starforged/moves/fate/pay_the_price).
