--- a/src/pages/moves/legacy/advance.mdx
+++ b/src/pages/moves/legacy/advance.mdx
@@ -1,5 +1,6 @@
 ---
 title: Advance
+page: 225
 ---
 
 **When you develop your abilities, improve your resources, gain a reward, or boost your influence**, you may spend 3 experience to add a new asset, or 2 experience to upgrade an asset. Choose from the following categories as appropriate to your focus and opportunities.
