--- a/src/pages/moves/quest/fulfill_your_vow.mdx
+++ b/src/pages/moves/quest/fulfill_your_vow.mdx
@@ -1,5 +1,6 @@
 ---
 title: Fulfill Your Vow
+page: 158
 progress_move: true
 ---
 
@@ -7,9 +8,9 @@ progress_move: true
 
 On a **strong hit**, your vow is fulfilled. Mark a reward on your quests legacy track per the vow's rank: troublesome=1 tick; dangerous=2 ticks; formidable=1 box; extreme=2 boxes; epic=3 boxes. Any allies who shared this vow also mark the reward.
 
-On a **weak hit**, as above, but there is more to be done or you realize the truth of your quest. If you <RouterLink to='/moves/quest/swear_an_iron_vow'>Swear an Iron Vow</RouterLink> to set things right, take your full legacy reward. Otherwise, make the reward one rank lower.
+On a **weak hit**, as above, but there is more to be done or you realize the truth of your quest. If you [Swear an Iron Vow](starforged/moves/quest/swear_an_iron_vow) to set things right, take your full legacy reward. Otherwise, make the reward one rank lower.
 
 On a **miss**, your vow is undone through an unexpected complication or realization. Envision what happens and choose one.
 
-- Give up on the quest: <RouterLink to='/moves/quest/forsake_your_vow'>Forsake Your Vow</RouterLink>.
+- Give up on the quest: [Forsake Your Vow](starforged/moves/quest/forsake_your_vow).
 - Recommit to the quest: Roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, raise the vow's rank by one (if not already epic).
