--- a/src/pages/moves/recover/heal.mdx
+++ b/src/pages/moves/recover/heal.mdx
@@ -1,5 +1,6 @@
 ---
 title: Heal
+page: 210
 ---
 
 **When you receive medical care or provide treatment**, envision the situation and roll. If you...
@@ -11,6 +12,6 @@ title: Heal
 
 On a **strong hit**, the care is helpful. If you (or the ally under your care) are wounded, clear the impact and take or give +2 health. Otherwise, take or give +3 health.
 
-On a **weak hit**, as above, but the recovery costs extra time or resources. Choose one: <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> (-2) or <RouterLink to='/moves/suffer/sacrifice_resources'>Sacrifice Resources</RouterLink> (-2).
+On a **weak hit**, as above, but the recovery costs extra time or resources. Choose one: [Lose Momentum](starforged/moves/suffer/lose_momentum) (-2) or [Sacrifice Resources](starforged/moves/suffer/sacrifice_resources) (-2).
 
-On a **miss**, the aid is ineffective and the situation worsens. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, the aid is ineffective and the situation worsens. [Pay the Price](starforged/moves/fate/pay_the_price).
