--- a/src/pages/moves/recover/hearten.mdx
+++ b/src/pages/moves/recover/hearten.mdx
@@ -1,11 +1,12 @@
 ---
 title: Hearten
+page: 211
 ---
 
 **When you socialize, share intimacy, or find a moment of peace**, roll +heart.
 
-On a **strong hit**, you find companionship or comfort and your spirit is strengthened. If you are shaken, clear the impact and take +1 spirit. Otherwise, take +2 spirit. If you make this move as you <RouterLink to='/moves/recover/sojourn'>Sojourn</RouterLink>, take +1 more.
+On a **strong hit**, you find companionship or comfort and your spirit is strengthened. If you are shaken, clear the impact and take +1 spirit. Otherwise, take +2 spirit. If you make this move as you [Sojourn](starforged/moves/recover/sojourn), take +1 more.
 
-On a **weak hit**, as above, but this indulgence is fleeting. Envision an interruption, complication, or inner conflict. Then, <RouterLink to='/moves/suffer/lose_momentum'>Lose Momentum</RouterLink> (-1).
+On a **weak hit**, as above, but this indulgence is fleeting. Envision an interruption, complication, or inner conflict. Then, [Lose Momentum](starforged/moves/suffer/lose_momentum) (-1).
 
-On a **miss**, you take no comfort and the situation worsens. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you take no comfort and the situation worsens. [Pay the Price](starforged/moves/fate/pay_the_price).
