--- a/src/pages/moves/recover/sojourn.mdx
+++ b/src/pages/moves/recover/sojourn.mdx
@@ -1,14 +1,15 @@
 ---
 title: Sojourn
+page: 209
 ---
 
 **When you spend time recovering within a community**, roll +heart.
 
-On a **strong hit**, this is a safe refuge. You and your allies may each choose two recover moves: <RouterLink to='/moves/recover/heal'>Heal</RouterLink>, <RouterLink to='/moves/recover/hearten'>Hearten</RouterLink>, <RouterLink to='/moves/recover/repair'>Repair</RouterLink>, or <RouterLink to='/moves/recover/resupply'>Resupply</RouterLink>. Instead of rolling, assume an automatic strong hit for each. An individual move can be taken more than once.
+On a **strong hit**, this is a safe refuge. You and your allies may each choose two recover moves: [Heal](starforged/moves/recover/heal), [Hearten](starforged/moves/recover/hearten), [Repair](starforged/moves/recover/repair), or [Resupply](starforged/moves/recover/resupply). Instead of rolling, assume an automatic strong hit for each. An individual move can be taken more than once.
 
 On a **weak hit**, as above, but time is short or resources are strained. You and your allies each make one recover move instead of two, with no more than three moves total among the group.
 
 On a **miss**, choose one.
 
-- The community needs your help, or makes a costly demand in exchange for safe harbor. Envision what they ask of you. If you do it, or <RouterLink to='/moves/quest/swear_an_iron_vow'>Swear an Iron Vow</RouterLink> to see it done, resolve this move as a strong hit.
-- You find no relief, and the situation grows worse. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+- The community needs your help, or makes a costly demand in exchange for safe harbor. Envision what they ask of you. If you do it, or [Swear an Iron Vow](starforged/moves/quest/swear_an_iron_vow) to see it done, resolve this move as a strong hit.
+- You find no relief, and the situation grows worse. [Pay the Price](starforged/moves/fate/pay_the_price).
