--- a/src/pages/moves/scene_challenge/finish_the_scene.mdx
+++ b/src/pages/moves/scene_challenge/finish_the_scene.mdx
@@ -6,6 +6,6 @@ title: Finish the Scene
 
 On a **strong hit**, you achieve your objective unconditionally.
 
-On a **weak hit**, you succeed, but not without cost. You must <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>. Make this a minor cost relative to the scope of the scene.
+On a **weak hit**, you succeed, but not without cost. You must [Pay the Price](starforged/moves/fate/pay_the_price). Make this a minor cost relative to the scope of the scene.
 
-On a **miss**, you fail or are undermined by a dire and costly turn of events. <RouterLink to='/moves/fate/pay_the_price'>Pay the Price</RouterLink>.
+On a **miss**, you fail or are undermined by a dire and costly turn of events. [Pay the Price](starforged/moves/fate/pay_the_price).
